--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.8"
+    "react-native": "0.73.8",
+    "react-native-navigation": "^7.39.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
