--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- HealthConnect permissions -->
+    <uses-permission android:name="android.permission.health.READ_HEART_RATE" android:minSdkVersion="34"/>
+    <uses-permission android:name="android.permission.health.READ_ACTIVE_CALORIES_BURNED" android:minSdkVersion="34"/>
+    <uses-permission android:name="android.permission.health.READ_DISTANCE" android:minSdkVersion="34"/>
+    <uses-permission android:name="android.permission.health.READ_EXERCISE" android:minSdkVersion="34"/>
+    <uses-permission android:name="android.permission.health.READ_TOTAL_CALORIES_BURNED" android:minSdkVersion="34"/>
+    <uses-permission android:name="android.permission.health.READ_STEPS" android:minSdkVersion="34"/>
+    <uses-permission android:name="android.permission.health.READ_SPEED" android:minSdkVersion="34"/>
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -21,5 +29,26 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <!-- For supported versions through Android 13, create an activity to show the rationale
+                 of Health Connect permissions once users click the privacy policy link. -->
+      <activity
+              android:name=".PermissionsRationaleActivity"
+              android:exported="true">
+          <intent-filter>
+              <action android:name="androidx.health.ACTION_SHOW_PERMISSIONS_RATIONALE"/>
+          </intent-filter>
+      </activity>
+       <!-- For versions starting Android 14, create an activity alias to show the rationale
+           of Health Connect permissions once users click the privacy policy link. -->
+      <activity-alias
+              android:name="ViewPermissionUsageActivity"
+              android:exported="true"
+              android:targetActivity=".PermissionsRationaleActivity"
+              android:permission="android.permission.START_VIEW_PERMISSION_USAGE">
+          <intent-filter>
+              <action android:name="android.intent.action.VIEW_PERMISSION_USAGE"/>
+              <category android:name="android.intent.category.HEALTH_PERMISSIONS"/>
+          </intent-filter>
+      </activity-alias>
     </application>
 </manifest>
